Fix horizontal scrollbars.

--- a/_css/shared.css
+++ b/_css/shared.css
@@ -16,6 +16,7 @@
     width: 100%;
     overflow-x: hidden;
     overflow-y: visible;
+    position: relative;
   }
   body > header .nav-link {
     font-weight: bold;
