--- a/css/shared.css
+++ b/css/shared.css
@@ -1679,6 +1679,7 @@
     width: 100%;
     overflow-x: hidden;
     overflow-y: visible;
+    position: relative;
   }
 
   body > header .nav-link {
